tests/ui/errors/snapshots/infer_try_block_break_outside_loop.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ `break` in `try` block
   ╭─[test.lis:5:7]
 4 │     if true {
 5 │       break;
   ·       ──┬──
   ·         ╰── not inside a loop
 6 │     }
   ╰────
  help: Use `break` inside a loop, or use `Err(...)?` to exit the `try` block early · code: [infer.try_block_break]
