tests/ui/errors/snapshots/infer_try_block_defer_inside_recover_names_the_inner_block.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ `defer` in `try` block
   ╭─[test.lis:7:7]
 6 │     let inner = try {
 7 │       defer cleanup()
   ·       ───────┬───────
   ·              ╰── not inside a function
 8 │       Some(42)?
   ╰────
  help: Move the `defer` outside the `try` block, so it runs when the function returns · code: [infer.try_block_defer]
